[gd_scene load_steps=17 format=2]

[ext_resource path="res://AssetsMenu/JogoFrutas/Habede Font by 7NTypes.otf" type="DynamicFontData" id=1]
[ext_resource path="res://AssetsMenu/JogoFrutas/Caju garai.png" type="Texture" id=2]
[ext_resource path="res://AssetsMenu/Numeros/5.tres" type="Texture" id=3]
[ext_resource path="res://AssetsMenu/Numeros/6.tres" type="Texture" id=4]
[ext_resource path="res://AssetsMenu/Numeros/7.tres" type="Texture" id=5]
[ext_resource path="res://AssetsMenu/Numeros/8.tres" type="Texture" id=6]
[ext_resource path="res://AssetsMenu/SAirr.tres" type="Texture" id=7]
[ext_resource path="res://AssetsMenu/JogoFrutas/Scene/5.gd" type="Script" id=8]
[ext_resource path="res://AssetsMenu/JogoFrutas/thumbnail-2.png" type="Texture" id=9]
[ext_resource path="res://AssetsMenu/images.png" type="Texture" id=10]
[ext_resource path="res://AssetsMenu/Correct2.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "Correct"
tracks/0/type = "value"
tracks/0/path = NodePath("Correct2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("XMaior:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("images2:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("images3:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="thumbnail-2" type="Sprite" parent="."]
position = Vector2( 512.5, 300.075 )
scale = Vector2( 1.46429, 0.859786 )
texture = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -1.0
margin_right = 1025.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="8" type="TextureButton" parent="."]
margin_left = 819.546
margin_top = 370.239
margin_right = 874.546
margin_bottom = 442.239
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="7" type="TextureButton" parent="."]
margin_left = 622.0
margin_top = 370.0
margin_right = 667.0
margin_bottom = 443.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="6" type="TextureButton" parent="."]
margin_left = 821.087
margin_top = 173.238
margin_right = 868.087
margin_bottom = 245.238
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="5" type="TextureButton" parent="."]
margin_left = 614.897
margin_top = 180.618
margin_right = 654.897
margin_bottom = 252.618
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = -0.850281
margin_right = 1025.0
margin_bottom = 86.1497
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quantos cajus o fazendeiro tem ?"
align = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Caju garai" type="Sprite" parent="."]
position = Vector2( 237.407, 340.612 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 492.0
margin_right = 1025.0
margin_bottom = 601.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="CenterContainer"]
margin_left = 462.0
margin_top = 4.0
margin_right = 562.0
margin_bottom = 105.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="images" type="Sprite" parent="."]
visible = false
position = Vector2( 867.803, 244.01 )
scale = Vector2( 0.732283, 0.711164 )
texture = ExtResource( 10 )

[node name="images3" type="Sprite" parent="."]
visible = false
position = Vector2( 664.916, 436.927 )
scale = Vector2( 0.732283, 0.711164 )
texture = ExtResource( 10 )

[node name="images2" type="Sprite" parent="."]
visible = false
position = Vector2( 869.663, 437.418 )
scale = Vector2( 0.732283, 0.711164 )
texture = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Correct = SubResource( 2 )
anims/Erro = SubResource( 3 )
anims/Erro3 = SubResource( 4 )
anims/erroretangulo = SubResource( 5 )

[node name="XMaior" type="Sprite" parent="."]
visible = false
position = Vector2( 546.095, 301.065 )
scale = Vector2( 3.09772, 3.17406 )
texture = ExtResource( 10 )

[node name="Correct2" type="Sprite" parent="."]
visible = false
position = Vector2( 635.798, 246.278 )
scale = Vector2( 1.09534, 1.22033 )
texture = ExtResource( 11 )
[connection signal="pressed" from="8" to="." method="_on_8_pressed"]
[connection signal="pressed" from="7" to="." method="_on_7_pressed"]
[connection signal="pressed" from="6" to="." method="_on_6_pressed"]
[connection signal="pressed" from="5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="CenterContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
